Finished enemies, Enemy.cs MeleeEnemy.cs cleanup, bone projectile sprite

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "All-Fangs-On-Deck.sln"
+    "dotnet.defaultSolution": "All-Fangs-On-Deck.sln",
+    "dotnet.preferCSharpExtension": true
 }
